Fix layout issue

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body{
-margin:0;
-font-family: Arial, Helvetica, sans-serif ;
+  display: flex;
+  flex-direction: column;
+  margin:0;
+  font-family: Arial, Helvetica, sans-serif ;
 }
 .container-home {
   display: flex;
+  flex-direction: column;
   margin:0;
   background-image: url(/images/carousel_img_1.png);
   background-repeat: no-repeat;
@@ -35,24 +38,36 @@ font-family: Arial, Helvetica, sans-serif ;
 .arrow{
   color: white;
 }
+.container-image {
+  position: relative;
+  height: 350px;
+  padding: 10px;
+}
 .backgroud-image{
   position:absolute;
-  padding-left: 75px;
+  right: 10px;
 }
 .top-image{
-  position: relative;
-  padding-top:140px;
-  padding-left: 15px;
+  position: absolute;
+  top: 135px;
+  left:10px;
+  
 }
-h1{
-  padding-left: 15px;
+.container-about {
+  padding: 0px 5px 0px 5px;
+  display: flex;
+  flex-direction: column;
 }
-h5{
-  padding-left: 15px;
+
+.container-about h1{
+margin: 0;
+margin-bottom: 15px;
+}
+.container-about h5{
+margin: 0;
   color: #986627;
 }
-p{
-  padding-left: 15px;
+.container-about p{
   color: grey;
   font-weight: bold;
  line-height: 35px;
@@ -60,15 +75,19 @@ p{
 .gallery{
   text-align: center;
 }
-.gallery-back{
+.container-gallery{
+  display: flex;
+  flex-direction: column;
   background-color:#f4f1f1;
 }
 .flex-container{
   display: flex;
   flex-wrap: wrap;
-  align-content: flex-start;
-  padding-left: 25px;
+  align-content: center;
+  justify-content: center;
+  gap: 10px;
+
 }
-img{
- padding: 4px;
+.flex-container img{
+width: 45%;
 }
